<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:orientation="vertical"
    tools:context=".fragments.EditDetailFragment">


    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/edit_detail_sync_switch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="50dp"
        android:paddingStart="4dp"
        android:text="@string/not_synchronized" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edit_detail_title_layout"
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/title"
        android:labelFor="@id/edit_detail_title">

        <EditText
            android:id="@+id/edit_detail_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="50dp"
            android:ems="10"
            android:inputType="text"
            android:importantForAutofill="no"
            tools:text="კიბერუსაფრთხოება" />

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:id="@+id/edit_detail_linear"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edit_detail_score_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:hint="@string/score"
            android:labelFor="@id/edit_detail_score"
            >

            <EditText
                android:id="@+id/edit_detail_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="50dp"
                android:ems="10"
                android:inputType="numberDecimal"
                android:importantForAutofill="no"
                tools:text="0" />

        </com.google.android.material.textfield.TextInputLayout>

        <Space
            android:id="@+id/edit_detail_space"
            android:layout_width="20dp"
            android:layout_height="0dp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edit_detail_order_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:hint="@string/order"
            android:labelFor="@id/edit_detail_order">

            <EditText
                android:id="@+id/edit_detail_order"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="50dp"
                android:ems="10"
                android:importantForAutofill="no"
                android:inputType="number"
                tools:text="45"
                />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="64dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/edit_detail_save_button"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="50dp"
            android:text="@string/save"
            android:outlineProvider="background"
            android:textColor="@color/pink_200"
            />
    </LinearLayout>

</LinearLayout>